--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@ header > p {
     padding-top: 20px;
     font: normal bold 1.2em var(--fonte-titulo);
     color: var(--cor05);
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.281);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.192);
 }
 
 main {
@@ -61,12 +61,24 @@ main {
 }
 
 main h2 {
-    font: normal normal 2.2em var(--fonte-natal) ;
+    font: normal normal 2em var(--fonte-natal) ;
 }
 
 main p {
-    font: normal normal 1em var(--fonte-titulo);
+    font: normal normal 1.2em var(--fonte-titulo);
+    line-height: 2em;
 }
+
+article > audio {
+    background-image:linear-gradient(to right, #ff03469c, #a73452af);
+    width: 400px;
+    height: 35px;
+    margin-top: 10px;
+    padding: 7px;
+    border-radius: 50px;
+
+}
+/* mexer CSS3 das imagens*/
 
 
 
