atualização de texto

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ main {
 
 main h2 {
     font: normal normal 1.8em var(--fonte-natal) ;
+    margin: 10px 0;
 }
 
 main #amor {
@@ -74,6 +75,7 @@ main #amor {
 main p {
     font: normal normal 1.2em var(--fonte-titulo);
     line-height: 1.8em;
+    padding: 10px 0;
 }
 
 article > audio {
@@ -93,7 +95,14 @@ main video {
     border-radius: 20px;
 }
 
+footer {
+    background-color: var(--cor05);
+    padding-top: 15px;
+    padding-bottom: 10px;
+    text-align: center;
+}
 
-
-
-
+footer > p {
+    color: rgba(255, 255, 255, 0.781);
+    font: normal bold 1em var(--fonte-titulo);
+}
