--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,7 @@ main {
     background-color: var(--cor01);
     margin: 10px auto 20px auto;
     padding: 20px;
+    box-shadow: 3px 5px 5px rgb(0 0 0 / 41%);
     border-top-left-radius: 150px;
     border-top-right-radius: 150px;
     text-align: center;
@@ -103,6 +104,17 @@ footer {
 }
 
 footer > p {
-    color: rgba(255, 255, 255, 0.781);
+    color: rgb(255, 255, 255);
     font: normal bold 1em var(--fonte-titulo);
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover{
+    background-color: var(--cor03);
+    border-radius: 10px;
+    padding: 5px 8px 5px 8px;
 }
