--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,11 @@ main video {
     border-radius: 20px;
 }
 
+main img {
+    border-radius: 5px;
+    box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.199);
+}
+
 footer {
     background-color: var(--cor05);
     padding-top: 15px;
